--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.4.18"
+    "mongoose": "^5.4.18",
+    "redis": "^4.2.0"
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
