--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.4.18",
-    "redis": "^4.2.0"
+    "redis": "^4.2.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
