--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.4.18",
     "redis": "^4.2.0",
+    "request": "^2.88.2",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
